# snice_ui

./: .gitignore  CMakeLists.txt  Makefile  Makefile.win  TODO.h  snice_ui.cbp  snice_ui.depend  snice_ui.layout  test_UI.cpp  test_UI.dev  test_UI.h  test_UI.layout
src/: UI_base.cpp  UI_base.h  UI_image.cpp  UI_image.h  UI_window.cpp  UI_window.h  file_system.h  file_system_posix.cpp  file_system_win.cpp_  image.cpp  image.h  mylist.cpp  mylist.h  snice_UI.cpp  snice_UI.h  tgafile.cpp  tgafile.h  viewport.cpp  viewport.h  viewports_array.cpp  viewports_array.h
src/dialog/: UI_dialog.cpp  UI_dialog.h  color_picker.cpp  color_picker.h  file_picker.cpp  file_picker.h  subdir.mk
src/include/: color_conversion.cpp  color_conversion.h
src/lib/: glfw.lib  tinyxmld.lib
src/widget/: UI_widget.cpp  UI_widget.h  array.cpp  array.h  button.cpp  button.h  color_band.cpp  color_band.h  color_display.cpp  color_display.h  color_select_display.cpp  color_select_display.h  file_selector.cpp  file_selector.h  label.cpp  label.h  menu.cpp  menu.h  progress.cpp  progress.h  slided_panel.cpp  slided_panel.h  slider.cpp  slider.h  sub_menu.cpp  sub_menu.h  subdir.mk  text_box.cpp  text_box.h  timeline.cpp  timeline.cpp_  timeline.h
src/xml/: subdir.mk  tinystr.cpp  tinystr.h  tinyxml.h  tinyxmlparser.cpp
